# core

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_tarballs.jl
cli/: cli.cpp  cli_utils.h
examples/: julia_quat.jl  sdf_rounded_box.jl
include/: Test.h  base.h  julia_wrapper.h  tracy_guard.h
include/api/: benchmark_tracker.h  config.h  pkg.h  transpiler.h
include/ast/: context.h  symbol_pool.h  visitor.h
include/backend/glsl/: backend_info.h  builtin_data.h  builtin_fn_sigs.def  code_gen.h  context.h  glsl_context.h  target_info.h  types.h
include/backend/glsl/node_defs/: scalars.def
include/backends/glsl/: types.h
include/common/: backend_info.h  base.h  bump_arena.h  bump_arena_allocator.h  concepts.h  config.h  literals.h  src_info.h  target_info.h  term_utils.h  utils.h
include/common/x_macros/: begin_def.inc
include/frontend/jl/: ast.h  context.h  ctor_resolver.h  dumper.h  lowering.h  module_pool.h  op_resolver.h  parser.h  parser_caches.h  pkg_driver.h  scope.h  sema.h  sym_res.h  type_conversion.h  utils.h  visitor.h
include/frontend/jl/ast/: ast.h
include/frontend/jl/ast/node_defs/: all_nodes.def
include/frontend/jl/node_defs/: all_nodes.def  decl.def  expr.def  types.def
include/frontend/jl/rt/: env.h  module_cache.h  sym_cache.h  type_cache.h  utils.h
include/ir/: ast.h  ast_context.h  type_descriptors.h  type_pool.h
include/meta/: version.h.in
include/sir/: ast.h  ast_context.h  ast_dumper.h  ast_visitor.h  context.h  dumper.h  visitor.h
include/sir/node_defs/: all_nodes.def  decl.def  expr.def
include/types/: qualifiers.h  type_descriptors.h  type_pool.h  type_to_string.h  type_visitor.h  types.h
include/types/qualifier_defs/: non_layout.def
misc/: valgrind.supp
sandbox/: run_alt.cpp  run_main.cpp  sb_dump_and_cg.cpp  sb_full.cpp  sb_jl_lower.cpp  test_ccall.jl
scripts/: build_all.ps1  init_debug_env.sh  pre-commit
src/: Test.cpp
src/api/: config.cpp  pkg.cpp  transpiler.cpp
src/ast/: symbol_pool.cpp
src/backend/glsl/: backend_info.cpp  builtin_data.cpp  code_gen.cpp  context.cpp  target_info.cpp  type_utils.cpp  types.cpp
src/backends/glsl/: types.cpp
src/common/: backend_info.cpp  src_info.cpp  target_info.cpp  utils.cpp
src/frontend/jl/: context.cpp  ctor_resolver.cpp  dumper.cpp  lowering.cpp  op_resolver.cpp  parser.cpp  pkg_driver.cpp  scope.cpp  sema.cpp  sym_res.cpp  type_conversion.cpp
src/frontend/jl/rt/: module_cache.cpp
src/frontends/jl/: pkg_driver.cpp
src/ir/: ast.cpp  type_pool.cpp
src/sir/: ast_dumper.cpp  dumper.cpp  sema.cpp
src/types/: type_descriptors.cpp  type_pool.cpp  type_to_string.cpp  types.cpp
test/: ast.cpp  bump_arena.cpp  transpile_examples.cpp
tests/: run.cpp
